# nl2sql

./: .gitignore  LICENSE  README.md  pyproject.toml  test_deepseek_embedding.py  test_zhipu_embedding.py
docs/: 01-development-roadmap.md  02-module-testing-playbook.md  03-agent-task-board.md  04-agent-task-board-round2.md  05-development-summary.md  architecture-diagram.md  chat-trace-protocol.md  chat-trace-test-report.md  chunk-metadata-spec.md  embedding-and-retrieval-flow.md  knowledge-workflow-guide.md  rag-confidence-gating-guide.md  rag-config-and-flags.md  rag-test-report-template.md  rag-upgrade-completion-summary.md  run.txt  vanna-nl2sql-core-logic-summary.md
docs/adr/: 0001-architecture-principles.md  0002-knowledge-to-chat-bridge.md  06-api-interface-spec.md  jjjj.md
examples/: quickstart.py
src/mine_agent/: __init__.py
src/mine_agent/capabilities/: __init__.py
src/mine_agent/config/: __init__.py  datasources.py  settings.py
src/mine_agent/core/: __init__.py
src/mine_agent/engine/: __init__.py  orchestrator.py
tests/: conftest.py
tests/contract/: test_datasource_contract.py
tests/e2e/: helpers.py  test_chat_api_e2e.py
tests/integration/: conftest.py  test_chat_schema_context_pipeline.py  test_oracle_integration.py
tests/unit/: test_api_fastapi.py  test_data_source_errors.py  test_data_source_router.py  test_embedding.py  test_knowledge_api.py  test_knowledge_context.py  test_oracle_adapter.py  test_orchestrator.py  test_orchestrator_resilience.py  test_query_data_tool.py  test_settings.py  test_snowflake_adapter.py  test_sql_guard.py
(+54 files in other folders)
