[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mine-agent"
version = "0.1.0"
description = "Internal agent framework inspired by modular LLM architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
oracle = [
    "oracledb>=2.4.0",
]
snowflake = [
    "snowflake-connector-python>=3.12.0",
]
openai = [
    "openai>=1.51.0",
]
embedding = [
    "openai>=1.51.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
